--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon2.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -15,7 +15,7 @@
     <!--link rel="stylesheet" href="/node_modules/react-responsive-carousel/lib/styles/carousel.min.css"/-->
     <script src="https://kit.fontawesome.com/5beb588c49.js" crossorigin="anonymous"></script>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <title>React App</title>
+    <title>Recorre Teotihuacán</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
